Add files to run an example image retrieval/description workflow

--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,13 @@
 # LLM Provider (watsonx/ollama/openai/groq)
-LLM_BACKEND="ollama"
+LLM_BACKEND="watsonx"
 
 ## WatsonX
 # WATSONX_API_KEY=""
 # WATSONX_PROJECT_ID=""
 # WATSONX_MODEL="meta-llama/llama-3-1-70b-instruct"
 # WATSONX_REGION="us-south"
+# Note: WatsonxChat looks for this parameter name, it will be the same as WATSONX_API_KEY
+# WATSONX_AI_APIKEY=
 
 ## Ollama
 # OLLAMA_HOST="http://0.0.0.0:11434"
@@ -42,3 +44,8 @@ BEE_FRAMEWORK_LOG_SINGLE_LINE="false"
 BEE_FRAMEWORK_INSTRUMENTATION_ENABLED="true"
 OTEL_EXPORTER_OTLP_ENDPOINT="http://127.0.0.1:4002"
 OTEL_EXPORTER_OTLP_HEADERS="x-bee-authorization=testing-api-key"
+
+
+# Flickr
+FLICKR_API_KEY=
+FLICKR_API_SECRET=
