--- a/package.json
+++ b/package.json
@@ -36,17 +36,19 @@
     "prepare": "husky && npm run _ensure_env"
   },
   "dependencies": {
-    "@ibm-cloud/watsonx-ai": "^1.3.0",
     "@google-cloud/vertexai": "^1.9.2",
+    "@ibm-cloud/watsonx-ai": "^1.3.0",
     "@ibm-generative-ai/node-sdk": "^3.2.4",
     "@opentelemetry/sdk-node": "^0.57.0",
     "axios": "^1.7.9",
     "bee-agent-framework": "^0.0.58",
     "bee-observe-connector": "^0.0.6",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "flickr-sdk": "^7.0.0-beta.9",
     "groq-sdk": "^0.7.0",
     "ollama": "^0.5.11",
+    "open": "^10.1.0",
     "openai": "^4.77.0",
     "openai-chat-tokens": "^0.2.8",
     "pino": "^9.4.0",
@@ -56,6 +58,7 @@
     "@eslint/js": "^9.10.0",
     "@types/eslint__js": "^8.42.3",
     "@types/eslint-config-prettier": "^6.11.3",
+    "@types/express": "^5.0.0",
     "@types/node": "^18.15.3",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
